feat: NATS implements

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,8 @@
-PORT = 
-NODE_ENV = 
+PORT = 3002
+NODE_ENV = Dev
+
+NATS_SERVERS = nats://localhost:4222
+
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
